--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">widgets</string>
+
+    <string name="demo_listview">listview</string>
+    <string name="demo_recyclerview">recyclerview</string>
 </resources>
